update mount volume and minikube files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
 version: "3.7"
 services:
-
   db:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
@@ -11,25 +10,17 @@ services:
       - my-datavolume:/var/lib/mysql
     ports:
       - "3306:3306"
-
   adminer:
     image: adminer
     restart: always
     ports:
       - 8080:8080
-
   fast-api:
      build: ./
      restart: always
      ports:
        - "8000:80"
      volumes:
-       -   docker-volume-absolute-path-volume:/app:rw
+       - ./app:/app:rw
 volumes:
   my-datavolume:
-  docker-volume-absolute-path-volume:
-    driver: local
-    driver_opts:
-      o: bind
-      type: none
-      device: /Users/paula/simplewebapp/app
